// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`init.behavior --name @branch given: [case1] feature branch with author prefix when: [t0] user runs init.behavior --name @branch then: stderr matches snapshot 1`] = `""`;

exports[`init.behavior --name @branch given: [case1] feature branch with author prefix when: [t0] user runs init.behavior --name @branch then: stdout matches snapshot 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.stone
   ├─ + 3.1.1.research.external.product.claims._.stone
   ├─ + 3.1.1.research.external.product.flagged._.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.stone
   ├─ + 3.1.3.research.internal.product.code.test._.stone
   ├─ + 3.1.5.research.reflection.product.audience._.stone
   ├─ + 3.1.5.research.reflection.product.premortem._.stone
   ├─ + 3.1.5.research.reflection.product.rootcause._.stone
   ├─ + 3.2.distill.repros.experience._.guard
   ├─ + 3.2.distill.repros.experience._.stone
   ├─ + 3.3.1.blueprint.product.guard
   ├─ + 3.3.1.blueprint.product.stone
   ├─ + 4.1.roadmap.stone
   ├─ + 5.1.execution.phase0_to_phaseN.guard
   ├─ + 5.1.execution.phase0_to_phaseN.stone
   ├─ + 5.2.evaluation.guard
   ├─ + 5.2.evaluation.stone
   ├─ + 5.3.verification.guard
   ├─ + 5.3.verification.stone
   ├─ + 5.5.playtest.guard
   ├─ + 5.5.playtest.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.add-user-auth/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch casey/add-user-auth <-> behavior v{DATE}.add-user-auth
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior --name @branch given: [case2] bare branch without slashes when: [t0] user runs init.behavior --name @branch then: stderr matches snapshot 1`] = `""`;

exports[`init.behavior --name @branch given: [case2] bare branch without slashes when: [t0] user runs init.behavior --name @branch then: stdout matches snapshot 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.stone
   ├─ + 3.1.1.research.external.product.claims._.stone
   ├─ + 3.1.1.research.external.product.flagged._.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.stone
   ├─ + 3.1.3.research.internal.product.code.test._.stone
   ├─ + 3.1.5.research.reflection.product.audience._.stone
   ├─ + 3.1.5.research.reflection.product.premortem._.stone
   ├─ + 3.1.5.research.reflection.product.rootcause._.stone
   ├─ + 3.2.distill.repros.experience._.guard
   ├─ + 3.2.distill.repros.experience._.stone
   ├─ + 3.3.1.blueprint.product.guard
   ├─ + 3.3.1.blueprint.product.stone
   ├─ + 4.1.roadmap.stone
   ├─ + 5.1.execution.phase0_to_phaseN.guard
   ├─ + 5.1.execution.phase0_to_phaseN.stone
   ├─ + 5.2.evaluation.guard
   ├─ + 5.2.evaluation.stone
   ├─ + 5.3.verification.guard
   ├─ + 5.3.verification.stone
   ├─ + 5.5.playtest.guard
   ├─ + 5.5.playtest.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.fix-urgent-bug/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch fix-urgent-bug <-> behavior v{DATE}.fix-urgent-bug
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior --name @branch given: [case3] on main branch when: [t0] user runs init.behavior --name @branch then: stderr matches snapshot 1`] = `
"{DIST}/domain.operations/behavior/name/expandBehaviorName.js:19
        throw new helpful_errors_1.BadRequestError(\`cannot init behavior on protected branch: \${input.branch}\`);
              ^

BadRequestError: BadRequestError: cannot init behavior on protected branch: main
    at expandBehaviorName ({DIST}/domain.operations/behavior/name/expandBehaviorName.js:19:15)
    at initBehavior ({DIST}/contract/cli/init.behavior.js:62:70)
    at Object.logic ({DIST}/index.js:35:15)
    at withEmojiSpaceShim ({DIST}/contract/sdk/withEmojiSpaceShim.js:14:28)
    at Object.initBehavior ({DIST}/index.js:60:67)
    at [eval]:1:48

Node.js v22.21.0"
`;

exports[`init.behavior --name @branch given: [case3] on main branch when: [t0] user runs init.behavior --name @branch then: stdout matches snapshot 1`] = `""`;

exports[`init.behavior --name @branch given: [case4] on master branch when: [t0] user runs init.behavior --name @branch then: stderr matches snapshot 1`] = `
"{DIST}/domain.operations/behavior/name/expandBehaviorName.js:19
        throw new helpful_errors_1.BadRequestError(\`cannot init behavior on protected branch: \${input.branch}\`);
              ^

BadRequestError: BadRequestError: cannot init behavior on protected branch: master
    at expandBehaviorName ({DIST}/domain.operations/behavior/name/expandBehaviorName.js:19:15)
    at initBehavior ({DIST}/contract/cli/init.behavior.js:62:70)
    at Object.logic ({DIST}/index.js:35:15)
    at withEmojiSpaceShim ({DIST}/contract/sdk/withEmojiSpaceShim.js:14:28)
    at Object.initBehavior ({DIST}/index.js:60:67)
    at [eval]:1:48

Node.js v22.21.0"
`;

exports[`init.behavior --name @branch given: [case4] on master branch when: [t0] user runs init.behavior --name @branch then: stdout matches snapshot 1`] = `""`;

exports[`init.behavior --name @branch given: [case5] detached HEAD state when: [t0] user runs init.behavior --name @branch then: stderr matches snapshot 1`] = `
"{DIST}/domain.operations/behavior/name/expandBehaviorName.js:15
        throw new helpful_errors_1.BadRequestError('cannot expand @branch in detached HEAD state');
              ^

BadRequestError: BadRequestError: cannot expand @branch in detached HEAD state
    at expandBehaviorName ({DIST}/domain.operations/behavior/name/expandBehaviorName.js:15:15)
    at initBehavior ({DIST}/contract/cli/init.behavior.js:62:70)
    at Object.logic ({DIST}/index.js:35:15)
    at withEmojiSpaceShim ({DIST}/contract/sdk/withEmojiSpaceShim.js:14:28)
    at Object.initBehavior ({DIST}/index.js:60:67)
    at [eval]:1:48

Node.js v22.21.0"
`;

exports[`init.behavior --name @branch given: [case5] detached HEAD state when: [t0] user runs init.behavior --name @branch then: stdout matches snapshot 1`] = `""`;

exports[`init.behavior --name @branch given: [case6] explicit name (regression test) when: [t0] user runs init.behavior --name my-explicit-name then: stderr matches snapshot 1`] = `""`;

exports[`init.behavior --name @branch given: [case6] explicit name (regression test) when: [t0] user runs init.behavior --name my-explicit-name then: stdout matches snapshot 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.stone
   ├─ + 3.1.1.research.external.product.claims._.stone
   ├─ + 3.1.1.research.external.product.flagged._.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.stone
   ├─ + 3.1.3.research.internal.product.code.test._.stone
   ├─ + 3.1.5.research.reflection.product.audience._.stone
   ├─ + 3.1.5.research.reflection.product.premortem._.stone
   ├─ + 3.1.5.research.reflection.product.rootcause._.stone
   ├─ + 3.2.distill.repros.experience._.guard
   ├─ + 3.2.distill.repros.experience._.stone
   ├─ + 3.3.1.blueprint.product.guard
   ├─ + 3.3.1.blueprint.product.stone
   ├─ + 4.1.roadmap.stone
   ├─ + 5.1.execution.phase0_to_phaseN.guard
   ├─ + 5.1.execution.phase0_to_phaseN.stone
   ├─ + 5.2.evaluation.guard
   ├─ + 5.2.evaluation.stone
   ├─ + 5.3.verification.guard
   ├─ + 5.3.verification.stone
   ├─ + 5.5.playtest.guard
   ├─ + 5.5.playtest.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.my-explicit-name/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch casey/some-branch <-> behavior v{DATE}.my-explicit-name
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;
